--- a/src/Mapbender/CoreBundle/Resources/views/Element/coordinatesdisplay.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/coordinatesdisplay.html.twig
@@ -1,4 +1,4 @@
-<div id="{{ id }}" class="mb-element-coordsdisplay">
+<div id="{{ id }}" class="mb-element mb-element-coordsdisplay">
 {% if configuration.title is defined %}
     <label for="{{ id }}-coords">{{ title|trans }}:</label>
 {% endif %}
