wms, core, manager bundle changed

--- a/src/Mapbender/CoreBundle/Resources/views/Element/coordinatesdisplay.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/coordinatesdisplay.html.twig
@@ -1,6 +1,1 @@
-<div id="{{ id }}" class="mb-element mb-element-coordsdisplay">
-{% if configuration.title is defined %}
-    <label for="{{ id }}-coords">{{ title|trans }}:</label>
-{% endif %}
-    <div id="{{ id }}-coords" title="{{ configuration.tooltip|default(title)|trans }}"><span></div>
-</div>
+<div id="{{ id }}" class="mb-element mb-element-coordsdisplay"></div>
