icons added, elements changed

--- a/src/Mapbender/CoreBundle/Resources/views/Element/legend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/legend.html.twig
@@ -1,2 +1,2 @@
-<a id="{{ id }}" class="mb-element mb-element-legend" title="{{ configuration.tooltip|default(title)|trans }}">{{title|trans }}</a>
+<!--a id="{{ id }}" class="mb-element mb-element-legend" title="{{ configuration.tooltip|default(title)|trans }}">{{title|trans }}</a-->
 <div id="{{ id }}-dialog" class="mb-element-legend-dialog"> </div>
